--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,9 +34,7 @@ jobs:
         uses: actions/setup-node@v6
         with:
           node-version: lts/*
-          cache: "npm"
-      - name: Install pnpm
-        run: npm i -g pnpm
+          cache: "pnpm"
       - name: Install dependencies
         run: pnpm ci
       - name: Build
