--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,14 +31,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v5
       - name: Set up Node
-        uses: actions/setup-node@v6
-        with:
-          node-version: lts/*
-          cache: "pnpm"
-      - name: Install pnpm
-        run: npm i -g pnpm
+        uses: pnpm/action-setup@v4
       - name: Install dependencies
-        run: pnpm ci
+        run: pnpm i
       - name: Build
         run: pnpm run build
       - name: Setup Pages
